调整结构，删除无用代码

--- a/src/pages/ArticleCard/ArticleCard.less
+++ b/src/pages/ArticleCard/ArticleCard.less
@@ -1,4 +1,4 @@
-
+.article-card-root {
   .article-card {
     box-sizing: border-box;
     border-radius: 4px;
@@ -8,23 +8,23 @@
     border: 1px solid #AAA;
     box-shadow: 5px 5px 0 0 #AAA;
 
-    &>.article-title {
+    & > .article-title {
       font-size: 20px;
       color: #28555A;
     }
 
-    &>.article-info {
+    & > .article-info {
       font-size: 14px;
       color: #757272;
       margin-top: 15px;
     }
 
-    &>.article-outline {
+    & > .article-outline {
       margin-top: 15px;
       color: rgba(0, 0, 0, .85);
     }
 
-    &>.article-detail {
+    & > .article-detail {
       color: #28555A;
       margin-top: 15px;
 
@@ -37,4 +37,6 @@
       }
     }
   }
+}
+
 
